
tutorialdir = $(datadir)/inkscape/tutorials

tutorial_DATA = \
    README \
    gpl-2.svg \
    making_markers.svg \
    oldguitar.jpg \
    potrace.png \
    potrace-de.png \
    potrace-fr.png \
    potrace-ru.png \
    tutorial-advanced.svg \
    tutorial-advanced.ca.svg \
    tutorial-advanced.cs.svg \
    tutorial-advanced.de.svg \
    tutorial-advanced.es.svg \
    tutorial-advanced.fr.svg \
    tutorial-advanced.it.svg \
    tutorial-advanced.ja.svg \
    tutorial-advanced.pt_BR.svg \
    tutorial-advanced.ru.svg \
    tutorial-advanced.sl.svg \
    tutorial-advanced.vi.svg \
    tutorial-advanced.zh_CN.svg \
    tutorial-basic.svg \
    tutorial-basic.bg.svg \
    tutorial-basic.ca.svg \
    tutorial-basic.cs.svg \
    tutorial-basic.da.svg \
    tutorial-basic.de.svg \
    tutorial-basic.es.svg \
    tutorial-basic.fr.svg \
    tutorial-basic.it.svg \
    tutorial-basic.ja.svg \
    tutorial-basic.nn.svg \
    tutorial-basic.pt_BR.svg \
    tutorial-basic.ru.svg \
    tutorial-basic.sk.svg \
    tutorial-basic.sl.svg \
    tutorial-basic.tr.svg \
    tutorial-basic.vi.svg \
    tutorial-basic.zh_CN.svg \
    tutorial-calligraphy.svg \
    tutorial-calligraphy.ca.svg \
    tutorial-calligraphy.cs.svg \
    tutorial-calligraphy.de.svg \
    tutorial-calligraphy.es.svg \
    tutorial-calligraphy.fr.svg \
    tutorial-calligraphy.pt_BR.svg \
    tutorial-calligraphy.ru.svg \
    tutorial-calligraphy.sl.svg \
    tutorial-calligraphy.vi.svg \
    tutorial-elements.svg \
    tutorial-elements.ca.svg \
    tutorial-elements.de.svg \
    tutorial-elements.es.svg \
    tutorial-elements.fr.svg \
    tutorial-elements.pt_BR.svg \
    tutorial-elements.ru.svg \
    tutorial-elements.sl.svg \
    tutorial-shapes.svg \
    tutorial-shapes.ca.svg \
    tutorial-shapes.cs.svg \
    tutorial-shapes.de.svg \
    tutorial-shapes.es.svg \
    tutorial-shapes.fr.svg \
    tutorial-shapes.it.svg \
    tutorial-shapes.ja.svg \
    tutorial-shapes.pt_BR.svg \
    tutorial-shapes.ru.svg \
    tutorial-shapes.sl.svg \
    tutorial-shapes.vi.svg \
    tutorial-shapes.zh_CN.svg \
    tutorial-tips.svg \
    tutorial-tips.ca.svg \
    tutorial-tips.de.svg \
    tutorial-tips.es.svg \
    tutorial-tips.fr.svg \
    tutorial-tips.it.svg \
    tutorial-tips.pt_BR.svg \
    tutorial-tips.ru.svg \
    tutorial-tips.sk.svg \
    tutorial-tips.sl.svg \
    tutorial-tracing.svg \
    tutorial-tracing.ca.svg \
    tutorial-tracing.de.svg \
    tutorial-tracing.es.svg \
    tutorial-tracing.fr.svg \
    tutorial-tracing.pt_BR.svg \
    tutorial-tracing.ru.svg \
    tutorial-tracing.sl.svg \
    tutorial-tracing.vi.svg \
    tux.png


EXTRA_DIST = $(tutorial_DATA)

