SET(2geom_SRC
angle.h
basic-intersection.cpp
basic-intersection.h
bezier.h
bezier-to-sbasis.h
bezier-utils.cpp
bezier-utils.h
choose.h
circle-circle.cpp
circulator.h
concepts.h
conjugate_gradient.cpp
conjugate_gradient.h
convex-cover.cpp
convex-cover.h
coord.h
crossing.cpp
crossing.h
d2.h
d2-sbasis.cpp
d2-sbasis.h
elliptical-arc.cpp
exception.h
forward.h
geom.cpp
geom.h
interval.h
isnan.h
linear.h
matrix.cpp
matrix.h
nearest-point.cpp
nearest-point.h
numeric
ord.h
path.cpp
path.h
path-intersection.cpp
path-intersection.h
pathvector.cpp
pathvector.h
piecewise.cpp
piecewise.h
point.cpp
point.h
point-l.h
point-ops.h
poly.cpp
poly-dk-solve.cpp
poly-dk-solve.h
poly.h
poly-laguerre-solve.cpp
poly-laguerre-solve.h
quadtree.cpp
quadtree.h
rect.h
region.cpp
region.h
sbasis-2d.cpp
sbasis-2d.h
sbasis.cpp
sbasis-geometric.cpp
sbasis-geometric.h
sbasis.h
sbasis-math.cpp
sbasis-math.h
sbasis-poly.cpp
sbasis-poly.h
sbasis-roots.cpp
sbasis-to-bezier.cpp
sbasis-to-bezier.h
shape.cpp
shape.h
solve-bezier-one-d.cpp
solve-bezier-parametric.cpp
solver.h
sturm.h
svg-path.cpp
svg-path.h
svg-path-parser.cpp
svg-path-parser.h
sweep.cpp
sweep.h
transforms.cpp
transforms.h
utils.h
)

ADD_LIBRARY(2geom STATIC ${2geom_SRC})
