SET(2geom_SRC
basic-intersection.cpp
bezier-utils.cpp
circle-circle.cpp
conjugate_gradient.cpp
convex-cover.cpp
crossing.cpp
curve-helpers.cpp
d2-sbasis.cpp
elliptical-arc.cpp
geom.cpp
matrix.cpp
nearest-point.cpp
numeric
path.cpp
path-intersection.cpp
pathvector.cpp
piecewise.cpp
point.cpp
poly.cpp
poly-dk-solve.cpp
poly-laguerre-solve.cpp
quadtree.cpp
region.cpp
sbasis-2d.cpp
sbasis.cpp
sbasis-geometric.cpp
sbasis-math.cpp
sbasis-poly.cpp
sbasis-roots.cpp
sbasis-to-bezier.cpp
shape.cpp
solve-bezier-one-d.cpp
solve-bezier-parametric.cpp
svg-path.cpp
svg-path-parser.cpp
sweep.cpp
transforms.cpp
)

ADD_LIBRARY(2geom STATIC ${2geom_SRC})
