SET(dialogs
clonetiler.cpp
debugdialog.cpp
dialog-events.cpp
eek-color-def.cpp
eek-preview.cpp
export.cpp
extensions.cpp
fill-style.cpp
find.cpp
guidelinedialog.cpp
iconpreview.cpp
in-dt-coordsys.cpp
input.cpp
item-properties.cpp
layer-properties.cpp
layers-panel.cpp
object-attributes.cpp
rdf.cpp
sp-attribute-widget.cpp
stroke-style.cpp
swatches.cpp
text-edit.cpp
tiledialog.cpp
unclump.cpp
xml-tree.cpp
)

ADD_LIBRARY(inkdialogs STATIC ${dialogs})
