
set(display_SRC
	canvas-arena.cpp
	canvas-axonomgrid.cpp
	canvas-bpath.cpp
	canvas-grid.cpp
	canvas-temporary-item-list.cpp
	canvas-temporary-item.cpp
	canvas-text.cpp
	curve.cpp
	gnome-canvas-acetate.cpp
	grayscale.cpp
	guideline.cpp
	inkscape-cairo.cpp
	nr-3dutils.cpp
	nr-arena-glyphs.cpp
	nr-arena-group.cpp
	nr-arena-image.cpp
	nr-arena-item.cpp
	nr-arena-shape.cpp
	nr-arena.cpp
	nr-filter-blend.cpp
	nr-filter-colormatrix.cpp
	nr-filter-component-transfer.cpp
	nr-filter-composite.cpp
	nr-filter-convolve-matrix.cpp
	nr-filter-diffuselighting.cpp
	nr-filter-displacement-map.cpp
	nr-filter-flood.cpp
	nr-filter-gaussian.cpp
	nr-filter-getalpha.cpp
	nr-filter-image.cpp
	nr-filter-merge.cpp
	nr-filter-morphology.cpp
	nr-filter-offset.cpp
	nr-filter-primitive.cpp
	# nr-filter-skeleton.cpp
	nr-filter-slot.cpp
	nr-filter-specularlighting.cpp
	nr-filter-tile.cpp
	nr-filter-turbulence.cpp
	nr-filter-units.cpp
	nr-filter-utils.cpp
	nr-filter.cpp
	nr-light.cpp
	nr-plain-stuff-gdk.cpp
	nr-plain-stuff.cpp
	nr-svgfonts.cpp
	nr-svgfonts.h
	pixblock-scaler.cpp
	pixblock-transform.cpp
	snap-indicator.cpp
	sodipodi-ctrl.cpp
	sodipodi-ctrlrect.cpp
	sp-canvas-util.cpp
	sp-canvas.cpp
	sp-ctrlline.cpp
	sp-ctrlpoint.cpp
	sp-ctrlquadr.cpp
)

include_directories(
	"${CMAKE_SOURCE_DIR}/src"
)

add_library(display_LIB ${display_SRC})
